--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.wasswa.testtest5.MainActivity">
+    tools:context="com.example.wasswa.testtest5.activity.MainActivity">
 
 
     <Button
@@ -23,7 +23,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/connect_buttonId">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -65,9 +66,9 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="350dp"
                 android:id="@+id/listViewMain"
-                />
+                 />
 
 
         </LinearLayout>
