--- a/app/src/main/res/layout/content_sensor_detector.xml
+++ b/app/src/main/res/layout/content_sensor_detector.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.wasswa.testtest5.SensorDetectorActivity"
+    tools:context="com.example.wasswa.testtest5.activity.SensorDetectorActivity"
     tools:showIn="@layout/activity_sensor_detector">
 
     <TextView
