--- a/app/src/main/res/layout/listviewitems.xml
+++ b/app/src/main/res/layout/listviewitems.xml
@@ -7,13 +7,24 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="16dp"
-        android:layout_centerVertical="true"
+        android:layout_centerVertical="false"
+        android:layout_marginTop="2dp"
         android:layout_marginLeft="10dp"
         android:text="IscheBinneEineSensor"
 
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Address"
+        android:layout_marginTop="0dp"
+        android:textSize="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@id/textView"
+        android:id="@+id/sensorAddress"
         />
 
     <ToggleButton
