--- a/app/src/main/res/menu/menu_sensor_detector.xml
+++ b/app/src/main/res/menu/menu_sensor_detector.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.wasswa.testtest5.SensorDetectorActivity">
+    tools:context="com.example.wasswa.testtest5.activity.SensorDetectorActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
